declare_args() {
    build_type = "debug"
    enable_lto = false
    enable_color = true
    enable_full_build = true
}

declare_args() {
    enable_mongo = false
    enable_postgres = false
    enable_bind_libraries = false
    enable_benchmarks = false
    enable_testing = true
    enable_mainnet_build = false
    enable_breakpad = false
}

flags = []
if(build_type == "debug") {
    flags += ["-O0", "-g"]
}
else if(build_type == "release") {
    flags += ["-O3", "-DNDEBUG"]
}

config("root") {
    cflags_cc = [
        "-std=c++17",
        "-Wall",
        "-Wextra",
        "-Werror",
        "-Wno-unused-parameter"
    ] + flags
}

