add_subdirectory(net_plugin)
add_subdirectory(net_api_plugin)
add_subdirectory(http_plugin)
add_subdirectory(http_client_plugin)
add_subdirectory(chain_plugin)
add_subdirectory(chain_api_plugin)
add_subdirectory(producer_plugin)
add_subdirectory(producer_api_plugin)
add_subdirectory(wallet_plugin)
add_subdirectory(wallet_api_plugin)
add_subdirectory(evt_plugin)
add_subdirectory(evt_api_plugin)
add_subdirectory(evt_link_plugin)
add_subdirectory(bnet_plugin)
add_subdirectory(trafficgen_plugin)

if(ENABLE_MONGODB_SUPPORT)
    add_subdirectory(mongo_db_plugin)
    add_subdirectory(history_plugin)
    add_subdirectory(history_api_plugin)
    add_subdirectory(postgresql_plugin)
else()
    message(STATUS "Not enabled mongo_db suuport, mongo_db_plugin and history_plguin will be omitted.")
endif()

# Forward variables to top level so packaging picks them up
set(CPACK_DEBIAN_PACKAGE_DEPENDS ${CPACK_DEBIAN_PACKAGE_DEPENDS} PARENT_SCOPE)
