add_subdirectory(net_plugin)
add_subdirectory(net_api_plugin)
add_subdirectory(http_plugin)
add_subdirectory(http_client_plugin)
add_subdirectory(chain_plugin)
add_subdirectory(chain_api_plugin)
add_subdirectory(producer_plugin)
add_subdirectory(producer_api_plugin)
add_subdirectory(staking_plugin)
add_subdirectory(wallet_plugin)
add_subdirectory(wallet_api_plugin)
add_subdirectory(evt_plugin)
add_subdirectory(evt_api_plugin)
add_subdirectory(evt_link_plugin)
add_subdirectory(bnet_plugin)
add_subdirectory(trafficgen_plugin)

if(ENABLE_POSTGRES_SUPPORT)
    add_subdirectory(postgres_plugin)
    add_subdirectory(history_plugin)
    add_subdirectory(history_api_plugin)
    target_compile_definitions(producer_plugin PUBLIC POSTGRES_SUPPORT)
else()
    message(STATUS "Not enabled postgresql suuport, postgresql_plugin and history_plguin will be omitted.")
endif()

# Forward variables to top level so packaging picks them up
set(CPACK_DEBIAN_PACKAGE_DEPENDS ${CPACK_DEBIAN_PACKAGE_DEPENDS} PARENT_SCOPE)
